--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,7 +43,7 @@ bind-key k split-window -c "#{pane_current_path}" \; swap-pane -U
 bind-key h split-window -c "#{pane_current_path}" -h \; swap-pane -U
 
 # Re-bind last-window.
-bind-key M-l last-window
+bind-key / last-window
 
 # New window.
 bind-key c new-window -c "#{pane_current_path}"
