Add a couple very useful binds

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,3 +47,12 @@ bind-key / last-window
 
 # New window.
 bind-key c new-window -c "#{pane_current_path}"
+
+# Use v to select text in vi-style copy mode (spacebar still works too).
+# And rebind rectangle-toggle to C-v (it's bound to v by default).
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy C-v rectangle-toggle
+
+# In vi-style copy mode, use y to yank the selection without leaving
+# copy mode.
+bind-key -t vi-copy y copy-selection -x
