A couple changes, lynx colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,6 +53,12 @@ bind-key c new-window -c "#{pane_current_path}"
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy C-v rectangle-toggle
 
-# In vi-style copy mode, use y to yank the selection without leaving
-# copy mode.
+# In vi-copy, yank to the system clipboard by default.
+# TODO: not working ...
+#bind-key -t vi-copy Enter copy-pipe 'xclip -in -selection clipboard'
+
+# In vi-style copy mode, use y to yank the selection (to clipboard)
+# without leaving copy mode.
+# TODO: not working ...
+#bind-key -t vi-copy y copy-pipe -x 'xclip -in -selection clipboard'
 bind-key -t vi-copy y copy-selection -x
