Fix issues with tmux copy bind

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+## Options
+
 # Set TERM environment variable to screen-256color when inside tmux.
 set-option -g default-terminal screen-256color
 
@@ -12,6 +14,8 @@ set-option -g status-keys emacs
 set-option -g mode-keys vi
 
 
+
+## Keybinds.
 
 # Change prefix key.
 unbind-key C-b
@@ -48,17 +52,20 @@ bind-key / last-window
 # New window.
 bind-key c new-window -c "#{pane_current_path}"
 
+
+
+## Copy mode binds.
+
 # Use v to select text in vi-style copy mode (spacebar still works too).
 # And rebind rectangle-toggle to C-v (it's bound to v by default).
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy C-v rectangle-toggle
 
-# In vi-copy, yank to the system clipboard by default.
-# TODO: not working ...
-#bind-key -t vi-copy Enter copy-pipe 'xclip -in -selection clipboard'
+# Yank to the system clipboard by default.
+bind-key -t vi-copy Enter copy-pipe "xclip -in -selection clipboard"
 
-# In vi-style copy mode, use y to yank the selection (to clipboard)
-# without leaving copy mode.
-# TODO: not working ...
-#bind-key -t vi-copy y copy-pipe -x 'xclip -in -selection clipboard'
+# Yank the selection without leaving copy mode.
+# Can't make this bind automatically copy to the system clipboard
+# unfortunately, so use the bind prefix+y to do it manually if you need to.
 bind-key -t vi-copy y copy-selection -x
+bind-key y run-shell -b "tmux show-buffer | xclip -in -selection clipboard"
