Small updates, clean a few things up

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,15 @@
 ## Options
 
 # Set TERM environment variable to screen-256color when inside tmux.
-set-option -g default-terminal screen-256color
+# TODO: ???
+#set-option -g default-terminal screen-256color
 
-# Send escape key almost right away(20 ms) when pressed.
-# Too short can cause issues.
-set-option -g escape-time 20
+# Assume xterm-256color terminals support true (24 bit) color.
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+# Send escape key almost right away (5 ms) when pressed.
+# When this was set to 0, I occasionally had issues.
+set-option -g escape-time 5
 
 # Use emacs-style keybindings in command-line mode.
 set-option -g status-keys emacs
