Increase tmux history limit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,9 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 # When this was set to 0, I occasionally had issues.
 set-option -g escape-time 5
 
+# Keep more history
+set-option -g history-limit 10000
+
 # Use emacs-style keybindings in command-line mode.
 set-option -g status-keys emacs
 
