--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,9 @@
 ## Options
 
-# Set TERM environment variable to screen-256color when inside tmux.
-# TODO: ???
-#set-option -g default-terminal screen-256color
-
 # Assume xterm-256color terminals support true (24 bit) color.
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-# Send escape key almost right away (5 ms) when pressed.
+# Send escape key almost right away when pressed (5 ms).
 # When this was set to 0, I occasionally had issues.
 set-option -g escape-time 5
 
