--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 ## Options
 
+# Assume xterm-256color terminals support true (24 bit) color.
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 # Send escape key almost right away when pressed (5 ms).
 # When this was set to 0, I occasionally had issues.
 set-option -g escape-time 5
