Comment out a tmux setting
The mentioned setting doesn't exist on CDF's older version of tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,5 +70,5 @@ bind-key -t vi-copy Enter copy-pipe "xclip -in -selection clipboard"
 # Yank the selection without leaving copy mode.
 # Can't make this bind automatically copy to the system clipboard
 # unfortunately, so use the bind prefix+y to do it manually if you need to.
-bind-key -t vi-copy y copy-selection -x
+#bind-key -t vi-copy y copy-selection -x
 bind-key y run-shell -b "tmux show-buffer | xclip -in -selection clipboard"
