A handful of updates

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,6 +49,12 @@ bind-key l split-window -c "#{pane_current_path}" -h
 bind-key k split-window -c "#{pane_current_path}" \; swap-pane -U
 bind-key h split-window -c "#{pane_current_path}" -h \; swap-pane -U
 
+# Swap two ajacent panes.
+bind-key M-k swap-pane -d -t {up-of}
+bind-key M-j swap-pane -d -t {down-of}
+bind-key M-h swap-pane -d -t {left-of}
+bind-key M-l swap-pane -d -t {right-of}
+
 # Re-bind last-window.
 bind-key / last-window
 
@@ -61,14 +67,13 @@ bind-key c new-window -c "#{pane_current_path}"
 
 # Use v to select text in vi-style copy mode (spacebar still works too).
 # And rebind rectangle-toggle to C-v (it's bound to v by default).
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy C-v rectangle-toggle
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 # Yank to the system clipboard by default.
-bind-key -t vi-copy Enter copy-pipe "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
-# Yank the selection without leaving copy mode.
-# Can't make this bind automatically copy to the system clipboard
-# unfortunately, so use the bind prefix+y to do it manually if you need to.
-#bind-key -t vi-copy y copy-selection -x
-bind-key y run-shell -b "tmux show-buffer | xclip -in -selection clipboard"
+# Yank the selection (to the system clipboard) without leaving copy mode.
+# This command (and copy-selection) are a little buggy for me; they garble
+# the screen when called, priting an MD5 hash (?) over the yanked selection.
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "xclip -in -selection clipboard"
