--- a/.ackrc
+++ b/.ackrc
@@ -4,5 +4,5 @@
 # Ignore .git directories
 --ignore-dir=.git
 
-# Ignore RELEASE_NOTES files
---ignore-file=is:RELEASE_NOTES
+# Ignore ctags tagfiles
+--ignore-file=is:tags
