Tiny change to tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,6 +70,10 @@ bind-key c new-window -c "#{pane_current_path}"
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
+# Scroll faster in copy mode.
+bind-key -T copy-mode-vi C-e send-keys -X -N 5 scroll-down
+bind-key -T copy-mode-vi C-y send-keys -X -N 5 scroll-up
+
 # Yank to the system clipboard by default.
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
