Small updates; tmux is now an alias

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,9 @@
 # Assume xterm-256color terminals support true (24 bit) color.
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+# Set value of TERM env var when inside tmux.
+set-option -g default-terminal "screen-256color"
+
 # Send escape key almost right away when pressed (5 ms).
 # When this was set to 0, I occasionally had issues.
 set-option -g escape-time 5
