--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,16 +23,20 @@ set-option -g mode-keys vi
 
 ## Keybinds.
 
-# Change prefix key.
+# Change prefix key to M-a
 unbind-key C-b
 set-option -g prefix M-a
 bind-key M-a send-prefix
 
-# Send prefix in one keypress. Good for nested sessions / ssh.
+# Send prefix in one keypress. Sometimes nice for nested sessions / ssh.
 bind-key -n M-s send-prefix
 
-# Open tmux command-line in fewer keypresses.
-bind-key -n M-\; command-prompt
+# Launch new windows in the same directory as the current pane
+bind-key c new-window -c "#{pane_current_path}"
+
+# Switch windows
+bind-key -n M-, previous-window
+bind-key -n M-\; next-window
 
 # Switch panes.
 bind-key -n M-k select-pane -U
@@ -46,7 +50,7 @@ bind-key -n M-J resize-pane -D 5
 bind-key -n M-H resize-pane -L 5
 bind-key -n M-L resize-pane -R 5
 
-# Split window.
+# Split current pane
 bind-key j split-window -c "#{pane_current_path}"
 bind-key l split-window -c "#{pane_current_path}" -h
 bind-key k split-window -c "#{pane_current_path}" \; swap-pane -U
@@ -58,11 +62,8 @@ bind-key M-j swap-pane -d -t {down-of}
 bind-key M-h swap-pane -d -t {left-of}
 bind-key M-l swap-pane -d -t {right-of}
 
-# Re-bind last-window.
+# Re-bind last-window (default is prefix + l).
 bind-key / last-window
-
-# New window.
-bind-key c new-window -c "#{pane_current_path}"
 
 
 
@@ -80,7 +81,7 @@ bind-key -T copy-mode-vi C-y send-keys -X -N 5 scroll-up
 # Yank to the system clipboard by default.
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
-# Yank the selection (to the system clipboard) without leaving copy mode.
-# This command (and copy-selection) are a little buggy for me; they garble
-# the screen when called, priting an MD5 hash (?) over the yanked selection.
+# Yank the selection (to the system clipboard), but without leaving copy mode.
+# This command is a little buggy for me; it garbles the text on the screen
+# when called, priting an MD5 hash (?) over the yanked selection.
 bind-key -T copy-mode-vi y send-keys -X copy-pipe "xclip -in -selection clipboard"
