--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,6 +79,7 @@ bind-key -T copy-mode-vi C-e send-keys -X -N 5 scroll-down
 bind-key -T copy-mode-vi C-y send-keys -X -N 5 scroll-up
 
 # Yank to the system clipboard by default.
+# Requires xclip installed.
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 # Yank the selection (to the system clipboard), but without leaving copy mode.
