Add tmux.conf work scripts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,3 +86,10 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -sel
 # This command is a little buggy for me; it garbles the text on the screen
 # when called, priting an MD5 hash (?) over the yanked selection.
 bind-key -T copy-mode-vi y send-keys -X copy-pipe "xclip -in -selection clipboard"
+
+
+
+## Additional work settings
+
+if-shell '[ -f ~/notes/scripts/tmux.conf ]' \
+    'source-file ~/notes/scripts/tmux.conf'
