--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,9 @@ set-option -g escape-time 5
 
 ## Options
 
+# Hide the status bar on startup.
+set-option -g status off
+
 # Use emacs-style keybindings in command-line mode.
 set-option -g status-keys emacs
 
@@ -24,13 +27,16 @@ set-option -g mode-keys vi
 # Keep more history
 set-option -g history-limit 10000
 
-# Show messages in the status line for longer (1.5 seconds).
-set-option -g display-time 1500
+# Show messages in the status line for longer (1.25 seconds).
+set-option -g display-time 1250
 
 # Status line time formatting: 12-hour
 # The status-right-length option is set to 40 by default, so we don't want
 # to print more than 19 characters of the pane title.
 set-option -g status-right ' "#{=19:pane_title}" %I:%M%P %d-%b-%y'
+
+# 12-hour time format for `prefix t' time display.
+set-option -g clock-mode-style 12
 
 
 
@@ -44,7 +50,8 @@ bind-key M-a send-prefix
 # Send prefix (M-a) in one keypress. Sometimes nice for nested tmux sessions.
 bind-key -n M-s send-prefix
 
-# Open a tmux command prompt with M-c (faster than `M-a S-;').
+# Open a tmux command prompt. Default keybind is `prefix :'
+bind-key \; command-prompt
 bind-key -n M-c command-prompt
 
 # Launch new windows in the same directory as the current pane
