--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,7 +58,7 @@ bind-key -n M-c command-prompt
 bind-key c new-window -c "#{pane_current_path}"
 
 # Toggle the status bar.
-bind-key b set-option status
+bind-key -n "M-'" set-option status
 
 
 
