Rename work scripts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,9 +15,6 @@ set-option -g escape-time 5
 
 ## Options
 
-# Hide the status bar on startup.
-set-option -g status off
-
 # Use emacs-style keybindings in command-line mode.
 set-option -g status-keys emacs
 
@@ -37,6 +34,22 @@ set-option -g status-right ' "#{=19:pane_title}" %I:%M%P %d-%b-%y'
 
 # 12-hour time format for `prefix t' time display.
 set-option -g clock-mode-style 12
+
+# Hide the status bar on startup.
+#set-option -g status off
+
+
+
+## Different colors on different machines
+
+# Select which color to use for the status bar and pane borders.
+# Green on laptop, cyan everywhere else.
+set-option -gF @theme_color \
+    "#{?#{||:#{==:#{host},kevan-thinkpad},#{==:#{host},kevan-ThinkPad-T450s}},green,cyan}"
+
+# Set colors accordingly.
+set-option -gF status-style fg=black,bg="#{@theme_color}"
+set-option -gF pane-active-border-style fg="#{@theme_color}"
 
 
 
@@ -121,5 +134,5 @@ bind-key -T copy-mode-vi y \
 ## Additional work settings
 
 # Load another config file.
-if-shell '[ -f ~/notes/scripts/tmux.conf ]' \
-    'source-file ~/notes/scripts/tmux.conf'
+if-shell '[ -f ~/notes/config/tmux-conf-snippet ]' \
+    'source-file ~/notes/config/tmux-conf-snippet'
