Add tmux save-history-to-file binds

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,6 +36,7 @@ set-option -g status-right ' "#{=19:pane_title}" %I:%M%P %d-%b-%y'
 set-option -g clock-mode-style 12
 
 # Hide the status bar on startup.
+# Diabled for now.
 #set-option -g status off
 
 
@@ -68,7 +69,8 @@ bind-key \; command-prompt
 bind-key -n M-c command-prompt
 
 # Launch new windows in the same directory as the current pane
-bind-key c new-window -c "#{pane_current_path}"
+# Diabled for now.
+#bind-key c new-window -c "#{pane_current_path}"
 
 # Toggle the status bar.
 bind-key -n "M-'" set-option status
@@ -104,6 +106,16 @@ bind-key M-h swap-pane -d -t {left-of}
 bind-key M-j swap-pane -d -t {down-of}
 bind-key M-k swap-pane -d -t {up-of}
 bind-key M-l swap-pane -d -t {right-of}
+
+
+
+# Save the current pane's history to a file, including color escape sequences.
+bind-key y command-prompt -p 'Save history to filename:' -I '~/tmux-history' \
+    'capture-pane -e -S - ; save-buffer %% ; delete-buffer'
+
+# The same as above, but with no colors.
+bind-key Y command-prompt -p 'Save history to filename:' -I '~/tmux-history' \
+    'capture-pane -S - ; save-buffer %% ; delete-buffer'
 
 
 
