Two new keybinds

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,12 +61,8 @@ unbind-key C-b
 set-option -g prefix M-a
 bind-key M-a send-prefix
 
-# Send prefix (M-a) in one keypress. Sometimes nice for nested tmux sessions.
-bind-key -n M-s send-prefix
-
 # Open a tmux command prompt. Default keybind is `prefix :'
-bind-key \; command-prompt
-bind-key -n M-c command-prompt
+bind-key -n M-s command-prompt
 
 # Launch new windows in the same directory as the current pane
 # Diabled for now.
