Revert a tmux keybind

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,8 +65,7 @@ bind-key M-a send-prefix
 bind-key -n M-s command-prompt
 
 # Launch new windows in the same directory as the current pane
-# Diabled for now.
-#bind-key c new-window -c "#{pane_current_path}"
+bind-key c new-window -c "#{pane_current_path}"
 
 # Toggle the status bar.
 bind-key -n "M-'" set-option status
