--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,21 +21,23 @@ set-option -g status-keys emacs
 # Use vi-style keybindings in copy mode.
 set-option -g mode-keys vi
 
-# Keep more history
-set-option -g history-limit 10000
+# Keep way more history.
+# With 50,000 lines of history per pane, you can expect each pane's history to
+# take about 1 or 2 MB of memory when full.
+set-option -g history-limit 50000
 
 # Show messages in the status line for longer (1.25 seconds).
 set-option -g display-time 1250
 
-# Status line time formatting: 12-hour
-# The status-right-length option is set to 40 by default, so we don't want
-# to print more than 19 characters of the pane title.
+# Status line time formatting: 12-hour clock
+# The status-right-length option is set to 40 (characters) by default, so we
+# don't want to print more than 19 characters of the pane title.
 set-option -g status-right ' "#{=19:pane_title}" %I:%M%P %d-%b-%y'
 
 # 12-hour time format for `prefix t' time display.
-set-option -g clock-mode-style 12
+set-window-option -g clock-mode-style 12
 
-# Hide the status bar on startup.
+# Hide the status bar of new sessions by default.
 # Diabled for now.
 #set-option -g status off
 
