--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,6 @@
-## Compatibility settings
+# -----------------------------------------------------------------------------
+# Compatibility settings
+# -----------------------------------------------------------------------------
 
 # When TERM is set to xterm-256color outisde tmux, assume support for true
 # (24-bit) color.
@@ -11,9 +13,9 @@ set-option -g default-terminal "screen-256color"
 # When this was set to 0, I occasionally had issues.
 set-option -g escape-time 5
 
-
-
-## Options
+# -----------------------------------------------------------------------------
+# Options
+# -----------------------------------------------------------------------------
 
 # Use emacs-style keybindings in command-line mode.
 set-option -g status-keys emacs
@@ -37,33 +39,29 @@ set-option -g status-right ' "#{=19:pane_title}" %I:%M%P %d-%b-%y'
 # 12-hour time format for `prefix t' time display.
 set-window-option -g clock-mode-style 12
 
-# Hide the status bar of new sessions by default.
-# Diabled for now.
-#set-option -g status off
 
 
-
-## Different colors on different machines
+# Different colors on different machines
 
 # Select which color to use for the status bar and pane borders.
 # Green on laptop, cyan everywhere else.
 set-option -gF @theme_color \
-    "#{?#{||:#{==:#{host},kevan-thinkpad},#{==:#{host},kevan-ThinkPad-T450s}},green,cyan}"
+    "#{?#{==:#{host},kevan-thinkpad},green,cyan}"
 
 # Set colors accordingly.
 set-option -gF status-style fg=black,bg="#{@theme_color}"
 set-option -gF pane-active-border-style fg="#{@theme_color}"
 
-
-
-## Keybinds.
+# -----------------------------------------------------------------------------
+# Keybinds
+# -----------------------------------------------------------------------------
 
 # Change prefix key to M-a
 unbind-key C-b
 set-option -g prefix M-a
 bind-key M-a send-prefix
 
-# Open a tmux command prompt. Default keybind is `prefix :'
+# Open a tmux command prompt with M-s. Default keybind is `prefix-:'
 bind-key -n M-s command-prompt
 
 # Launch new windows in the same directory as the current pane
@@ -90,8 +88,6 @@ bind-key -n M-J resize-pane -D 5
 bind-key -n M-K resize-pane -U 5
 bind-key -n M-L resize-pane -R 5
 
-
-
 # Split current pane
 bind-key h split-window -c "#{pane_current_path}" -h \; swap-pane -U
 bind-key j split-window -c "#{pane_current_path}"
@@ -114,9 +110,9 @@ bind-key y command-prompt -p 'Save history to filename:' -I '~/tmux-history' \
 bind-key Y command-prompt -p 'Save history to filename:' -I '~/tmux-history' \
     'capture-pane -S - ; save-buffer %% ; delete-buffer'
 
-
-
-## Copy mode binds.
+# -----------------------------------------------------------------------------
+# Copy mode binds
+# -----------------------------------------------------------------------------
 
 # Use v to select text in vi-style copy mode (spacebar still works too).
 # And rebind rectangle-toggle to C-v (it's bound to v by default).
@@ -138,10 +134,10 @@ bind-key -T copy-mode-vi Enter \
 bind-key -T copy-mode-vi y \
     send-keys -X copy-pipe "xclip -in -selection clipboard"
 
+# -----------------------------------------------------------------------------
+# Misc
+# -----------------------------------------------------------------------------
 
-
-## Additional work settings
-
-# Load another config file.
+# Load work-related settings
 if-shell '[ -f ~/notes/config/tmux-conf-snippet ]' \
     'source-file ~/notes/config/tmux-conf-snippet'
