--- a/.inputrc
+++ b/.inputrc
@@ -8,10 +8,7 @@ set show-all-if-ambiguous on
 # press tab with an empty prefix.
 set match-hidden-files off
 
-# C-t = search forward. This is bound to C-s by default, but most terminals
-# use C-s for pausing screen output, so readline will never receive the "C-s".
-# See https://superuser.com/a/610990
-"\C-t": forward-search-history
+
 
 # Bind meta-p to ctrl-p, enter; ie run previous command.
 "\ep": "\C-p\n"
@@ -19,4 +16,9 @@ set match-hidden-files off
 # Bind meta-o to exit shell if last command successful.
 # Gets queued if pressed while a command is running.
 # Can be cancelled with backspace.
-"\eo": "if [ $? == 0 ]; then exit; fi\n"
+"\eo": "if [ $? -eq 0 ]; then exit; else false; fi\n"
+
+# C-t = search forward. This is bound to C-s by default, but most terminals
+# use C-s for pausing screen output, so readline will never receive the "C-s".
+# See https://superuser.com/a/610990
+"\C-t": forward-search-history
