Hide tmux status line

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,16 +41,26 @@ set-window-option -g clock-mode-style 12
 
 
 
-# Different colors on different machines
+# Different color theme on different machines
+
+# Show status line by default when on hosts other than my laptop.
+set-option -gF status "#{?#{!=:#{host},kevan-thinkpad},on,off}"
 
 # Select which color to use for the status bar and pane borders.
-# Green on laptop, cyan everywhere else.
-set-option -gF @theme_color \
-    "#{?#{==:#{host},kevan-thinkpad},green,cyan}"
+# Grey on laptop, cyan everywhere else.
+# (Under Solarized, brightcyan is a light grey, and brightgreen is dark grey.)
+set-option -g @status_text_color brightblack
+set-option -gF @status_color \
+    "#{?#{==:#{host},kevan-thinkpad},brightgreen,cyan}"
+set-option -gF @active_color \
+    "#{?#{==:#{host},kevan-thinkpad},brightgreen,cyan}"
+set-option -gF @inactive_color \
+    "#{?#{==:#{host},kevan-thinkpad},black,default}"
 
 # Set colors accordingly.
-set-option -gF status-style fg=black,bg="#{@theme_color}"
-set-option -gF pane-active-border-style fg="#{@theme_color}"
+set-option -gF status-style fg="#{@status_text_color}",bg="#{@status_color}"
+set-option -gF pane-active-border-style fg="#{@active_color}"
+set-option -gF pane-border-style fg="#{@inactive_color}"
 
 # -----------------------------------------------------------------------------
 # Keybinds
@@ -65,7 +75,8 @@ bind-key M-a send-prefix
 bind-key -n M-s command-prompt
 
 # Launch new windows in the same directory as the current pane
-bind-key c new-window -c "#{pane_current_path}"
+# Also, unhide the status line whenever you create a new window.
+bind-key c set-option status on \; new-window -c "#{pane_current_path}"
 
 # Toggle the status bar.
 bind-key -n "M-'" set-option status
