--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,10 +4,7 @@
 
 # When TERM is set to xterm-256color outisde tmux, assume support for true
 # (24-bit) color.
-set-option -ga terminal-overrides "xterm-256color:Tc"
-
-# Set value of TERM env var when inside tmux.
-set-option -g default-terminal "screen-256color"
+set-option -ga terminal-overrides xterm-256color:Tc
 
 # Send escape key almost right away when pressed (5 ms).
 # When this was set to 0, I occasionally had issues.
@@ -39,28 +36,22 @@ set-option -g status-right ' "#{=19:pane_title}" %I:%M%P %d-%b-%y'
 # 12-hour time format for `prefix t' time display.
 set-window-option -g clock-mode-style 12
 
-
+# Hide status line by default on my laptop.
+%if #{==:#{host},kevan-thinkpad}
+set-option -g status off
+%endif
 
 # Different color theme on different machines
-
-# Show status line by default when on hosts other than my laptop.
-set-option -gF status "#{?#{!=:#{host},kevan-thinkpad},on,off}"
-
-# Select which color to use for the status bar and pane borders.
-# Grey on laptop, cyan everywhere else.
-# (Under Solarized, brightcyan is a light grey, and brightgreen is dark grey.)
-set-option -g @status_text_color brightblack
-set-option -gF @status_color \
-    "#{?#{==:#{host},kevan-thinkpad},brightgreen,cyan}"
-set-option -gF @active_color \
-    "#{?#{==:#{host},kevan-thinkpad},brightgreen,cyan}"
-set-option -gF @inactive_color \
-    "#{?#{==:#{host},kevan-thinkpad},black,default}"
-
-# Set colors accordingly.
-set-option -gF status-style fg="#{@status_text_color}",bg="#{@status_color}"
-set-option -gF pane-active-border-style fg="#{@active_color}"
-set-option -gF pane-border-style fg="#{@inactive_color}"
+%if #{==:#{host},kevan-thinkpad}
+set-option -g status-style fg=brightblack,bg=brightgreen
+set-option -g pane-active-border-style fg=brightgreen
+set-option -g pane-border-style fg=black
+%endif
+%if #{!=:#{host},kevan-thinkpad}
+set-option -g status-style fg=brightblack,cyan
+set-option -g pane-active-border-style fg=cyan
+set-option -g pane-border-style fg=default
+%endif
 
 # -----------------------------------------------------------------------------
 # Keybinds
@@ -150,5 +141,4 @@ bind-key -T copy-mode-vi y \
 # -----------------------------------------------------------------------------
 
 # Load work-related settings
-if-shell '[ -f ~/notes/config/tmux-conf-snippet ]' \
-    'source-file ~/notes/config/tmux-conf-snippet'
+source-file -q ~/notes/config/tmux-conf-snippet
