--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,7 +48,7 @@ set-option -g pane-active-border-style fg=brightgreen
 set-option -g pane-border-style fg=black
 %endif
 %if #{!=:#{host},kevan-thinkpad}
-set-option -g status-style fg=brightblack,cyan
+set-option -g status-style fg=brightblack,bg=cyan
 set-option -g pane-active-border-style fg=cyan
 set-option -g pane-border-style fg=default
 %endif
