--- a/.tmux.conf
+++ b/.tmux.conf
@@ -128,13 +128,19 @@ bind-key -T copy-mode-vi C-y send-keys -X -N 5 scroll-up
 # Yank to the system clipboard by default.
 # Requires xclip installed.
 bind-key -T copy-mode-vi Enter \
-    send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+    send-keys -X copy-pipe-and-cancel \
+    "xclip -in -selection clipboard"
 
 # Yank the selection (to the system clipboard), but without leaving copy mode.
 # This command is a little buggy for me; it garbles the text on the screen
 # when called, priting an MD5 hash (?) over the yanked selection.
 bind-key -T copy-mode-vi y \
-    send-keys -X copy-pipe "xclip -in -selection clipboard"
+    send-keys -X copy-pipe \
+    "xclip -in -selection clipboard"
+
+# Paste from the system clipboard by default.
+bind-key ] run-shell \
+    "xclip -out -selection clipboard | tmux load-buffer -; tmux paste-buffer"
 
 # -----------------------------------------------------------------------------
 # Misc
