Add an .ideavimrc setting

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -14,3 +14,5 @@ set scrolloff=5
 set ignorecase " I really don't like this, but `noremap / /\c` doesn't work.
 set clipboard+=unnamedplus " Yank/paste to/from system clipboard always.
                            " This includes `y', `d', `c', `p', etc.
+set visualbell " Don't make bell noises for things like <C-c>, h at beginning
+               " of line, k at beginning of file, etc.
