Add `l` function as a pager

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,6 +69,9 @@ bind-key -n M-s command-prompt
 # Also, unhide the status line whenever you create a new window.
 bind-key c set-option status on \; new-window -c "#{pane_current_path}"
 
+# Unhide the status line when you break a pane into its own window.
+bind-key ! set-option status on \; break-pane
+
 # Toggle the status bar.
 bind-key -n "M-'" set-option status
 
