tmux copy mode improvements

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,6 +60,9 @@ bind-key M-a send-prefix
 # Open a tmux command prompt with M-s. Default keybind is `prefix-:'
 bind-key -n M-s command-prompt
 
+# Toggle the status bar.
+bind-key -n "M-'" set-option status
+
 # Launch new windows in the same directory as the current pane
 # Also, unhide the status line whenever you create a new window.
 bind-key c set-option status on \; new-window -c "#{pane_current_path}"
@@ -67,8 +70,11 @@ bind-key c set-option status on \; new-window -c "#{pane_current_path}"
 # Unhide the status line when you break a pane into its own window.
 bind-key ! set-option status on \; break-pane
 
-# Toggle the status bar.
-bind-key -n "M-'" set-option status
+# Bind page-up to "enter copy mode and go back one page", and then auto-exit
+# copy-mode upon paging to the bottom.
+# Basically, make page-up/page-down behave as expected.
+bind-key -n PageUp copy-mode -eu
+bind-key -n PageDown run-shell true  # Do nothing when in normal mode.
 
 
 
@@ -131,10 +137,25 @@ bind-key -T copy-mode-vi Enter \
 
 # Yank the selection (to the system clipboard), but without leaving copy mode.
 # This command is a little buggy for me; it garbles the text on the screen
-# when called, priting an MD5 hash (?) over the yanked selection.
+# when called, priting an MD5 hash (?) over the yanked selection. This seems to
+# be a tmux issue, since the same thing happens for 'copy-selection' (no pipe).
 bind-key -T copy-mode-vi y \
     send-keys -X copy-pipe \
     "xclip -in -selection clipboard"
+
+# Yank the entire current line, but without the newline at the end.
+bind-key -T copy-mode-vi Y \
+    send-keys -X select-line \; \
+    send-keys -X copy-pipe-and-cancel \
+    "tr -d '\n' | xclip -in -selection clipboard"
+
+# Yank from the cursor to the end of the current line, without the trailing
+# newline.
+bind-key -T copy-mode-vi D \
+    send-keys -X begin-selection \; \
+    send-keys -X end-of-line \; \
+    send-keys -X copy-pipe-and-cancel \
+    "tr -d '\n' | xclip -in -selection clipboard"
 
 # Paste from the system clipboard by default.
 bind-key ] run-shell \
