--- a/.tmux.conf
+++ b/.tmux.conf
@@ -129,37 +129,36 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi C-e send-keys -X -N 5 scroll-down
 bind-key -T copy-mode-vi C-y send-keys -X -N 5 scroll-up
 
-# Yank to the system clipboard by default.
-# Requires xclip installed.
+# Yank to the system clipboard by default (if xclip is installed).
 bind-key -T copy-mode-vi Enter \
     send-keys -X copy-pipe-and-cancel \
-    "xclip -in -selection clipboard"
-
-# Yank the selection (to the system clipboard), but without leaving copy mode.
-# This command is a little buggy for me; it garbles the text on the screen
-# when called, priting an MD5 hash (?) over the yanked selection. This seems to
-# be a tmux issue, since the same thing happens for 'copy-selection' (no pipe).
-bind-key -T copy-mode-vi y \
-    send-keys -X copy-pipe \
-    "xclip -in -selection clipboard"
-
-# Yank the entire current line, but without the newline at the end.
-bind-key -T copy-mode-vi Y \
-    send-keys -X select-line \; \
-    send-keys -X copy-pipe-and-cancel \
-    "tr -d '\n' | xclip -in -selection clipboard"
-
-# Yank from the cursor to the end of the current line, without the trailing
-# newline.
-bind-key -T copy-mode-vi D \
-    send-keys -X begin-selection \; \
-    send-keys -X end-of-line \; \
-    send-keys -X copy-pipe-and-cancel \
-    "tr -d '\n' | xclip -in -selection clipboard"
+    "command -v xclip && xclip -in -selection clipboard || tmux load-buffer -"
 
 # Paste from the system clipboard by default.
 bind-key ] run-shell \
-    "xclip -out -selection clipboard | tmux load-buffer -; tmux paste-buffer"
+    "command -v xclip > /dev/null && \
+     (xclip -out -selection clipboard | tmux load-buffer -); \
+     tmux paste-buffer"
+
+# Yank the selection (to the system clipboard), without leaving copy mode.
+# The `copy-pipe` command is a little buggy for me; it garbles the text on
+# the screen when called. (I also have the same issue with `copy-selection`.)
+bind-key -T copy-mode-vi y \
+    send-keys -X copy-pipe \
+    "command -v xclip && xclip -in -selection clipboard || tmux load-buffer -"
+
+# Yank the current line, without the trailing newline.
+bind-key -T copy-mode-vi Y \
+    send-keys -X select-line \; \
+    send-keys -X copy-pipe-and-cancel "tr -d '\n' | \
+    (command -v xclip && xclip -in -selection clipboard || tmux load-buffer -)"
+
+# Yank from the cursor to end-of-line, without the trailing newline.
+bind-key -T copy-mode-vi D \
+    send-keys -X begin-selection \; \
+    send-keys -X end-of-line \; \
+    send-keys -X copy-pipe-and-cancel "tr -d '\n' | \
+    (command -v xclip && xclip -in -selection clipboard || tmux load-buffer -)"
 
 # -----------------------------------------------------------------------------
 # Misc
