--- a/.ideavimrc
+++ b/.ideavimrc
@@ -7,6 +7,7 @@ noremap <CR> gg
 noremap <C-y> 5<C-y>
 noremap <C-e> 5<C-e>
 noremap <Home> ^
+noremap <Space> <Nop>
 nnoremap gp `[v`]
 
 " Settings
