--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,11 @@ set-option -g status-keys emacs
 # Use vi-style keybindings in copy mode.
 set-option -g mode-keys vi
 
+# Make the word separators used for `w` motion more Vim-like;
+# ie, everything but `_`.
+set-option -g word-separators ' !"#$%&()*+,-./:;<=>?@[\]^`{|}+~'
+set-option -ga word-separators "'"
+
 # Keep way more history.
 # With 50,000 lines of history per pane, you can expect each pane's history to
 # take about 1 or 2 MB of memory when full.
@@ -128,6 +133,10 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # Scroll 5x faster in copy mode.
 bind-key -T copy-mode-vi C-e send-keys -X -N 5 scroll-down
 bind-key -T copy-mode-vi C-y send-keys -X -N 5 scroll-up
+
+# Home and end keys
+bind-key -T copy-mode-vi Home send-keys -X back-to-indentation
+bind-key -T copy-mode-vi End send-keys -X end-of-line
 
 # Yank to the system clipboard by default (if xclip is installed).
 bind-key -T copy-mode-vi Enter \
