Add default i3status config

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -153,4 +153,6 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
         status_command i3status
+
+        font pango:DejaVu Sans Mono 8
 }
