i3 status bar: 12 hour clock

--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -8,7 +8,7 @@
 
 general {
         colors = true
-        interval = 5
+        interval = 1
 }
 
 order += "ipv6"
@@ -35,7 +35,7 @@ battery all {
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "%Y-%m-%d %I:%M%P"
 }
 
 load {
