--- a/.config/i3/config
+++ b/.config/i3/config
@@ -120,6 +120,8 @@ bindsym $mod+Shift+0 move container to workspace 10
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
+# restart i3bar to reload ~/.config/i3status/config
+bindsym $mod+Shift+b exec "killall i3bar; i3bar --bar_id=status-bar &"
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
@@ -152,6 +154,8 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+        id status-bar
+
         status_command i3status
 
         font pango:DejaVu Sans Mono 8
