--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,7 +9,8 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod4
+set $Win Mod4
+set $Alt Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -26,104 +27,104 @@ font pango:DejaVu Sans Mono 8
 # X core fonts rendering does not support right-to-left and this being a bitmap
 # font, it doesn’t scale on retina/hidpi displays.
 
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
+# Use Mouse+$Win to drag floating windows to their wanted position
+floating_modifier $Win
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $Win+Return exec i3-sensible-terminal
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $Win+$Alt+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $Win+d exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+# bindsym $Win+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
+bindsym $Win+h focus left
+bindsym $Win+j focus down
+bindsym $Win+k focus up
+bindsym $Win+l focus right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+bindsym $Win+Left focus left
+bindsym $Win+Down focus down
+bindsym $Win+Up focus up
+bindsym $Win+Right focus right
 
 # move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
+bindsym $Win+$Alt+h move left
+bindsym $Win+$Alt+j move down
+bindsym $Win+$Alt+k move up
+bindsym $Win+$Alt+l move right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+bindsym $Win+$Alt+Left move left
+bindsym $Win+$Alt+Down move down
+bindsym $Win+$Alt+Up move up
+bindsym $Win+$Alt+Right move right
 
 # split in horizontal orientation
-bindsym $mod+semicolon split h
+bindsym $Win+semicolon split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+bindsym $Win+v split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
+bindsym $Win+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+bindsym $Win+s layout stacking
+bindsym $Win+w layout tabbed
+bindsym $Win+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $Win+$Alt+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+bindsym $Win+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+a focus parent
+bindsym $Win+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+#bindsym $Win+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $Win+1 workspace 1
+bindsym $Win+2 workspace 2
+bindsym $Win+3 workspace 3
+bindsym $Win+4 workspace 4
+bindsym $Win+5 workspace 5
+bindsym $Win+6 workspace 6
+bindsym $Win+7 workspace 7
+bindsym $Win+8 workspace 8
+bindsym $Win+9 workspace 9
+bindsym $Win+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $Win+$Alt+1 move container to workspace 1
+bindsym $Win+$Alt+2 move container to workspace 2
+bindsym $Win+$Alt+3 move container to workspace 3
+bindsym $Win+$Alt+4 move container to workspace 4
+bindsym $Win+$Alt+5 move container to workspace 5
+bindsym $Win+$Alt+6 move container to workspace 6
+bindsym $Win+$Alt+7 move container to workspace 7
+bindsym $Win+$Alt+8 move container to workspace 8
+bindsym $Win+$Alt+9 move container to workspace 9
+bindsym $Win+$Alt+0 move container to workspace 10
 
 # reload the configuration file
-bindsym $mod+Shift+c reload
+bindsym $Win+$Alt+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
+bindsym $Win+$Alt+r restart
 # restart i3bar to reload ~/.config/i3status/config
-bindsym $mod+Shift+b exec "killall i3bar; i3bar --bar_id=status-bar &"
+bindsym $Win+$Alt+b exec "killall i3bar; i3bar --bar_id=status-bar &"
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $Win+$Alt+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -149,7 +150,7 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
-bindsym $mod+r mode "resize"
+bindsym $Win+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
