--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,24 +33,22 @@ set-option -g history-limit 50000
 # Show messages in the status line for longer (1.25 seconds).
 set-option -g display-time 1250
 
-# Status line time formatting: 12-hour clock
-# The status-right-length option is set to 40 (characters) by default, so we
-# don't want to print more than 19 characters of the pane title.
-set-option -g status-right ' "#{=19:pane_title}" %I:%M%P %d-%b-%y'
-
 # 12-hour time format for `prefix t' time display.
 set-window-option -g clock-mode-style 12
 
 # Different color theme on different machines
 %if #{==:#{host},kevan-thinkpad}
+set-option -g status off
 set-option -g status-style fg=brightblack,bg=brightgreen
 set-option -g pane-active-border-style fg=brightgreen
 set-option -g pane-border-style fg=black
+set-option -g status-right '  %I:%M%P'
 %endif
 %if #{!=:#{host},kevan-thinkpad}
 set-option -g status-style fg=brightblack,bg=cyan
 set-option -g pane-active-border-style fg=cyan
 set-option -g pane-border-style fg=default
+set-option -g status-right ' "#{=29:pane_title}" %I:%M%P'
 %endif
 
 # -----------------------------------------------------------------------------
