--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,13 +42,13 @@ set-option -g status off
 set-option -g status-style fg=brightblack,bg=brightgreen
 set-option -g pane-active-border-style fg=brightgreen
 set-option -g pane-border-style fg=black
-set-option -g status-right '  %I:%M%P'
+set-option -g status-right ''
 %endif
 %if #{!=:#{host},kevan-thinkpad}
 set-option -g status-style fg=brightblack,bg=cyan
 set-option -g pane-active-border-style fg=cyan
 set-option -g pane-border-style fg=default
-set-option -g status-right ' "#{=29:pane_title}" %I:%M%P'
+set-option -g status-right ' "#{=37:pane_title}"'
 %endif
 
 # -----------------------------------------------------------------------------
