--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,14 +37,14 @@ set-option -g display-time 1250
 set-window-option -g clock-mode-style 12
 
 # Different color theme on different machines
-%if #{==:#{host},kevan-thinkpad}
+%if #{m:kevan-*,#{host}}
 set-option -g status off
 set-option -g status-style fg=brightblack,bg=brightgreen
 set-option -g pane-active-border-style fg=brightgreen
 set-option -g pane-border-style fg=black
 set-option -g status-right ''
 %endif
-%if #{!=:#{host},kevan-thinkpad}
+%if #{!=:#{m:kevan-*,#{host}},1}
 set-option -g status-style fg=brightblack,bg=cyan
 set-option -g pane-active-border-style fg=cyan
 set-option -g pane-border-style fg=default
