--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -15,7 +15,7 @@ general {
 #order += "disk /"
 #order += "wireless _first_"
 #order += "ethernet _first_"
-#order += "battery all"
+order += "battery all"
 #order += "load"
 order += "tztime local"
 
@@ -31,7 +31,10 @@ ethernet _first_ {
 }
 
 battery all {
-        format = "%status %percentage %remaining"
+        #format = "%status %percentage %remaining"
+        format = "%percentage"
+        integer_battery_capacity = true
+        last_full_capacity = true
 }
 
 tztime local {
