Enable tmux clock in status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,7 +42,8 @@ set-option -g status off
 set-option -g status-style fg=brightblack,bg=brightgreen
 set-option -g pane-active-border-style fg=brightgreen
 set-option -g pane-border-style fg=black
-set-option -g status-right ''
+set-option -g status-right '  %l:%M%P'
+#set-option -g status-right ''
 %endif
 %if #{!=:#{m:kevan-*,#{host}},1}
 set-option -g status-style fg=brightblack,bg=cyan
